<resources>
    <string name="app_name">Take A Place</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Ryomario</string>
    <string name="nav_header_subtitle">ryomario1802@gmail.com</string>
    <string name="nav_header_desc">Account photo profile</string>
    <string name="action_settings">Settings</string>

    <string name="user_location_permission_explanation">Akses lokasi dibutuhkan agar dapat menjalankan fitur peta dengan
        baik
    </string>
    <string name="user_location_permission_not_granted">Akses lokasi dibutuhkan</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_fragment_login">Login</string>
    <string name="title_fragment_daftar">Sign up</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_up">Sign up</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_email">Not a valid email</string>
    <string name="invalid_password">Password must be more than 6 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="daftar_failed">"Sign up failed"</string>
    <string name="bottom_sheet_title">Bottom Sheet Title</string>
    <string name="example_minut_btn_text">23 min</string>
</resources>